--- a/src/ui/src/app/components/home/home.component.html
+++ b/src/ui/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
 		<div class="row align-items-center pt-5 mt-4 mt-xxl-0">
 			<!-- Video + Parallax -->
 			<div class="col-lg-6 mb-4 mb-lg-0 pb-3 pb-lg-0">
-				<div #parallaxElement class="parallax mx-auto mx-lg-0" style="max-width: 582px">
-					<div class="parallax-layer z-3" data-depth="0.1">
+				<div class="mx-auto mx-lg-0" id="scene" style="max-width: 582px">
+					<div class=" z-3" data-depth="0.1">
 						<div class="position-relative bg-dark mx-auto" style="max-width: 61%; padding: 0.3125rem; margin-bottom: 9.9%; border-radius: calc(var(--ar-border-radius) * 2.125)">
 							<div class="position-absolute start-50 translate-middle-x" style="top: 4.4%; width: 85%">
 								<div class="row row-cols-4 gx-2 mb-3">
@@ -37,18 +37,20 @@
 							</video>
 						</div>
 					</div>
-					<div class="parallax-layer" data-depth="0.3">
+                  
+					<div class="" data-depth="0.3">
 						<img src="{{webassets}}/webassets/images/home/shape01.svg" alt="Background shape" />
 					</div>
-					<div class="parallax-layer z-2" data-depth="-0.1">
+					<div class=" z-2" data-depth="-0.1">
 						<img src="{{webassets}}/webassets/images/home/shape02.svg" alt="Background shape" />
 					</div>
-					<div class="parallax-layer" data-depth="-0.15">
+					<div class="" data-depth="-0.15">
 						<img src="{{webassets}}/webassets/images/home/shape03.svg" alt="Background shape" />
 					</div>
-					<div class="parallax-layer z-2" data-depth="-0.25">
+					<div class=" z-2" data-depth="-0.25">
 						<img src="{{webassets}}/webassets/images/home/shape04.svg" alt="Background shape" />
 					</div>
+                    
 				</div>
 			</div>
 			<div class="col-lg-6 pb-5 mb-5 text-center text-lg-start">
