--- a/src/ui/src/app/components/studio/home/home.component.html
+++ b/src/ui/src/app/components/studio/home/home.component.html
@@ -25,7 +25,7 @@
 			<ul class="nav mt-auto mx-n2 pt-sm-3 pt-lg-0">
 				<li class="nav-item me-3"><a class="nav-link p-2" target="_blank" href="https://www.youtube.com/@JSM33T">youtube</a></li>
 				<li class="nav-item me-3"><a class="nav-link p-2" target="_blank" href="https://soundcloud.com/jsm33t">soundcloud</a></li>
-				<li class="nav-item"><a class="nav-link p-2" target="_blank" href="https://www.instagram.com/thecoffeeroominsta/">instagram</a></li>
+				<li class="nav-item"><a class="nav-link p-2" target="_blank" href="https://www.instagram.com/jsm33t/">instagram</a></li>
 			</ul>
 		</div>
 
